# vscode-remote-try-rust

./: Cargo.toml
src/: main.rs
